* OTH#0000 Add user's groups and party's bank account among historizable models by configuration
* FEA#8212 Execution of heavy business treatment in asynchronous mode
* OTH#0000 Fix client plugin linking in coog repo link
* BUG#8683 RGPD: Remove anonymization of banks
* BUG#8843 Force order in search_and_stream method
* FEA#8621 RGPD: Apply RGPD tryton evolution to Coog
* OTH#0000 Stop the server if field definitions are inconsistent

Version 2.0 - 2018-04-13
* OTH#0000 Fix inconsistencies in field definitions
* FEA#8448 Add data anonymization scripts
* FEA#8160 Function cache for rng (not serializable)
* BUG#8091 Use "Decimal" in the "convert_frequency" function
* FEA#8095 Add a search and stream feature to optimize reportings
* OTH#0000 Add "Hard" tag in the "test converter"
* BUG#8013 Reactivate Debug Object
* BUG#8025 Fix sub transactions crash in scenarios
* BUG#7961 Fix the sub transactions processing at PostExecutionDataManager commit
* FEA#7848 Add a batch to facilitate the creation of data update treatments
* BUG#7836 Fix the enqueued task parameters
* FEA#7673 Add get_prorated_amount_on_period function, which allows to compute a certain amount given a start amount and a period of time. This function is mainly used to compute an amount given a premium and a time period.
* OTH#0000 Never crash when searching for a translation
* BUG#7587 Fix the encoder / decoder for the persistant context wizards

Version 1.14 - 2017-11-09
* OTH#0000 No need to decode empty dict values in version_getter
* FEA#7001 Add the number of succeeded jobs in the generated batch log
* FEA#7218 Improve documentation delivery and content
* BUG#7356 Export Link with event type when exporting event type action